RESOLVED FIXED233913
[GPU Process] WebXR tests crash with full GPU Process
https://bugs.webkit.org/show_bug.cgi?id=233913
Summary [GPU Process] WebXR tests crash with full GPU Process
Jon Lee
Reported 2021-12-06 21:55:22 PST
https://build.webkit.org/results/Apple-Catalina-Debug-WK2-GPUProcess-Tests/r286573%20(3144)/results.html WebXR tests consistently crash when GPU Process is turned on. http/wpt/webxr/xrHandInput_gc.html http/wpt/webxr/xrViewport_singleView_valid.https.html imported/w3c/web-platform-tests/webxr/events_input_source_recreation.https.html imported/w3c/web-platform-tests/webxr/events_input_sources_change.https.html imported/w3c/web-platform-tests/webxr/events_session_select.https.html imported/w3c/web-platform-tests/webxr/events_session_squeeze.https.html imported/w3c/web-platform-tests/webxr/getInputPose_handedness.https.html imported/w3c/web-platform-tests/webxr/getViewerPose_emulatedPosition.https.html imported/w3c/web-platform-tests/webxr/navigator_xr_sameObject.https.html imported/w3c/web-platform-tests/webxr/xrBoundedReferenceSpace_updates.https.html imported/w3c/web-platform-tests/webxr/xrFrame_getPose.https.html imported/w3c/web-platform-tests/webxr/xrFrame_getViewerPose_getPose.https.html imported/w3c/web-platform-tests/webxr/xrFrame_lifetime.https.html imported/w3c/web-platform-tests/webxr/xrFrame_session_sameObject.https.html imported/w3c/web-platform-tests/webxr/xrInputSource_add_remove.https.html imported/w3c/web-platform-tests/webxr/xrInputSource_emulatedPosition.https.html imported/w3c/web-platform-tests/webxr/xrInputSource_profiles.https.html imported/w3c/web-platform-tests/webxr/xrInputSource_sameObject.https.html imported/w3c/web-platform-tests/webxr/xrPose_transform_sameObject.https.html imported/w3c/web-platform-tests/webxr/xrReferenceSpace_originOffset_viewer.https.html imported/w3c/web-platform-tests/webxr/xrReferenceSpace_originOffset.https.html imported/w3c/web-platform-tests/webxr/xrReferenceSpace_originOffsetBounded.https.html imported/w3c/web-platform-tests/webxr/xrReferenceSpace_relationships.https.html imported/w3c/web-platform-tests/webxr/xrSession_cancelAnimationFrame_invalidhandle.https.html imported/w3c/web-platform-tests/webxr/xrSession_cancelAnimationFrame.https.html imported/w3c/web-platform-tests/webxr/xrSession_requestAnimationFrame_callback_calls.https.html imported/w3c/web-platform-tests/webxr/xrSession_requestAnimationFrame_data_valid.https.html imported/w3c/web-platform-tests/webxr/xrSession_requestAnimationFrame_getViewerPose.https.html imported/w3c/web-platform-tests/webxr/xrSession_requestAnimationFrame_timestamp.https.html imported/w3c/web-platform-tests/webxr/xrSession_sameObject.https.html imported/w3c/web-platform-tests/webxr/xrSession_viewer_referenceSpace.https.html imported/w3c/web-platform-tests/webxr/xrStationaryReferenceSpace_floorlevel_updates.https.html imported/w3c/web-platform-tests/webxr/xrView_eyes.https.html imported/w3c/web-platform-tests/webxr/xrView_match.https.html imported/w3c/web-platform-tests/webxr/xrView_oneframeupdate.https.html imported/w3c/web-platform-tests/webxr/xrView_sameObject.https.html imported/w3c/web-platform-tests/webxr/xrViewerPose_views_sameObject.https.html imported/w3c/web-platform-tests/webxr/xrViewport_valid.https.html imported/w3c/web-platform-tests/webxr/xrWebGLLayer_viewports.https.html
Attachments
Radar WebKit Bug Importer
Comment 1 2021-12-06 21:55:59 PST
Kimmo Kinnunen
Comment 2 2021-12-07 04:53:47 PST
Yes, WebXR is not implemented in GPUP compatible manner.
Dan Glastonbury
Comment 3 2024-05-09 17:19:00 PDT
EWS
Comment 4 2024-05-12 18:24:16 PDT
Committed 278668@main (e7ae0d2e886f): <https://commits.webkit.org/278668@main> Reviewed commits have been landed. Closing PR #28281 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.