[WebXR] WebXR tests crash with full GPU Process https://bugs.webkit.org/show_bug.cgi?id=233913 rdar://86139280

Reviewed by Mike Wyrzykowski.

Fix SimulatedXRDevice to work on Cocoa again.

SimulatedXRDevice had been patched to create a dummy IOSurface so the code would
compile but it was never tested. SimulatedXRDevice was written before GPU
process and was expecting to be able to create an OpenGL texture that could be
passed as WebXROpaqueFramebuffer's compositor texture.

Instead of using OpenGL, or IOSurface, for Cocoa we now create a temporary
renderbuffer to be used as the display color buffer, internal to
WebXROpaqueFramebuffer, if a null MachSendRight is received via
PlatformXR::FrameData::LayerData.

Fixed a logic error in WebXROpaqueFramebuffer::setupFramebuffer which was
causing the drawing attachments to never be allocated. This was causing the
checkFramebufferStatus in blitShared to fail.

* Source/WebCore/Modules/webxr/WebXROpaqueFramebuffer.cpp:
(WebCore::makeExternalImageSource):
(WebCore::createAndBindTempBuffer):
(WebCore::toIntSize):
(WebCore::WebXROpaqueFramebuffer::startFrame):
(WebCore::WebXROpaqueFramebuffer::setupFramebuffer):
* Source/WebCore/Modules/webxr/WebXROpaqueFramebuffer.h:
(WebCore::WebXRAttachmentSet::operator bool const):
* Source/WebCore/platform/xr/PlatformXR.h:
* Source/WebCore/testing/WebFakeXRDevice.cpp:
(WebCore::SimulatedXRDevice::initializeTrackingAndRendering):
(WebCore::SimulatedXRDevice::shutDownTrackingAndRendering):
(WebCore::SimulatedXRDevice::frameTimerFired):
(WebCore::SimulatedXRDevice::createLayerProjection):
(WebCore::SimulatedXRDevice::deleteLayer):
* Source/WebCore/testing/WebFakeXRDevice.h:
* Source/WebKit/Shared/XR/PlatformXR.serialization.in:

Canonical link: https://commits.webkit.org/278668@main